
Tue Dec 30 00:36:27 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkboard.c, gtkgame.c, play.c: add "resign -1" as a command
	to guess the resign level and add appropriately (i.e. resign if the
	error is below 0.05). Use it to autoresign or pop the resign dialog in
	the gui.

Mon Dec 29 23:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gnub.c: Fix rare crash on exit.

Mon Dec 29 23:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* util.c: Hack GetTemporaryFile() so it will work properly.

Mon Dec 29 22:06:40 CET 2008 Christian Anthon <anthon@kiku.dk>

	* common.h, configure.in, lib/neuralnet.c, lib/neuralnetsse.c: move
	replacement declarations of signbit and lrint to common.h

Mon Dec 29 22:03:44 CET 2008 Christian Anthon <anthon@kiku.dk>

	* common.h, configure.in: 
Mon Dec 29 21:11:31 CET 2008 Christian Anthon <anthon@kiku.dk>

	* po/es.po: updated spanish translation

Mon Dec 29 11:56:38 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: turn splash screen off by default

Mon Dec 29 11:36:28 CET 2008 Christian Anthon <anthon@kiku.dk>

	* play.c: make end game work without gtk

Mon Dec 29 00:08:28 CET 2008 Christian Anthon <anthon@kiku.dk>

	* util.c: fix CreateTempFile to something that hopefully works
	universally

Thu Dec 28 22:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtktoolbar.c: Fix size of edit button
	* gtkgame.c: Fix menu toolbar state (on startup)

Sun Dec 28 01:18:17 CET 2008 Christian Anthon <anthon@kiku.dk>

	* eval.c: fix a bug in eval lookup in hypergammon db. iPos was (by
	accident) made an unsigned short int in november 2004, but should be
	at least an int.

Fri Dec 26 00:33:04 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkprefs.c, gtktoolbar.c: we don't use the old tooltip api anymore

Thu Dec 18 22:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprogress.c: Fix bug in number of rollouts displayed when alternatives
			finish early (reported by Bob Koca)
