@@ -17,11 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
-<<<<<<< gtkgame.c
  * $Id$
-=======
- * $Id$
->>>>>>> 1.746
  */
 
 #include "config.h"
