@@ -870,12 +870,20 @@ static void get_eq_before_resign(cubeinfo *pci, decisionData *pdd)
 	}
 }
 
-static int check_resigns(cubeinfo * pci, int resigned)
+extern int check_resigns(cubeinfo * pci)
 {
 	float rEqBefore, rEqAfter;
 	const float max_cost = 0.05f;
 	const float max_gain = 1e-6f;
 	decisionData dd;
+	cubeinfo ci;
+	int resigned = 1;
+
+	if (pci == NULL)
+	{
+		GetMatchStateCubeInfo( &ci, &ms );
+		pci = &ci;
+	}
 
 	get_eq_before_resign(pci, &dd);
 	do
@@ -913,8 +921,8 @@ static int ComputerTurn( void ) {
   case PLAYER_GNU:
 	  if( ms.fResigned ) {
 		  int resign;
-		  if (ms.fResigned ==-1)
-			  resign = check_resigns(&ci, 1);
+		  if (ms.fResigned == -1)
+			  resign = check_resigns(&ci);
 		  else
 		  {
 			  float rEqBefore, rEqAfter;
